tests/NormalTests/paczka2/big_fuzzy/71746996.err
Error in line 1: S768 S798 51,3
Error in line 29: YdJ1zkE A92m 147,5
Error in line 23: q3fUY2 S768 19,5
Error in line 47: 7QYKJafj S353 213,4
Error in line 52: 1n7cQas S768 93,0
Error in line 24: YdJ1zkE A926 33,0
Error in line 56: YdJ1zkE S798 50,9
Error in line 57: 1n7cQas S353 34,4
Error in line 63: q3fUY2 S798 67,6
Error in line 68: q3fUY2 S768 3,9
Error in line 70: GwcTn S768 21,2
Error in line 91: q3fUY2 S768 47,3
Error in line 93: q3fUY2 A926 71,6
Error in line 95: CGu S798 51,8
Error in line 97: 7QYKJafj S798 39,4
Error in line 94: q3fUY2 S768 15,2
Error in line 100: q3fUY2 A926 84,9
Error in line 119: 7QYKJafj S798 78,9
Error in line 122: 7QYKJafj S798 31,7
Error in line 152: S768 S768 83,38
Error in line 155: 1n7cQas S353 28,9
Error in line 154: CGu S798 4,9
Error in line 162: CGu A926 38,9
Error in line 166: q3fUY2 S798 29,0
Error in line 167: CGu S768 99,2
Error in line 172: GwcTn S798 71,9
Error in line 174: GwcTn A926 74,4
Error in line 184: 1n7cQas S798 67,9
Error in line 178: CGu S353 0,0
Error in line 185: 1n7cQas S353 50,9
Error in line 183: YdJ1zkE S768 64,1
Error in line 188: 1n7cQas A926 168,1
Error in line 220: CGu S768 -4,4
